fix: ui overflow issue on small width devices <320px samsung z fold 3 fix: set fixed height for pattern-area, to prevent resizing between questions

--- a/quiz.css
+++ b/quiz.css
@@ -94,6 +94,8 @@ header {
   gap: 10px;
 
   max-width: 340px;
+  /* fixed height */
+  height: 340px;
 }
 
 .pattern-area,
@@ -105,6 +107,8 @@ header {
 
 .patterns-answers-container {
   display: flex;
+  /* to prevent overflow on devices with w<320px like z fold */
+  overflow: hidden;
   justify-content: space-evenly;
 
   /* landscape-like */
@@ -238,6 +242,7 @@ hr {
 
 footer {
   position: sticky;
+  overflow: hidden;
   bottom: 0;
   background-color: var(--body-bg-color);
   box-shadow: 0px 0px 5px 1px #0000003d;
